[tool.poetry]
name = "midas"
version = "0.0.0"
description = "Retailer integration service"
authors = ["mlatham <ml@bink.com>"]
license = "Bink"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arrow = "^1.3.0"
blinker = "^1.7.0"
flask-restplus = "^0.13.0"
hashids = "^1.3.1"
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
celery = "^5.3.6"
flask = "^3.0.0"
flask-restful = "^0.3.10"
flask-script = "^2.0.6"
tenacity = "^8.2.3"
sentry-sdk = "^1.39.0"
requests = "^2.31.0"
prometheus-client = "^0.19.0"
werkzeug = "^3.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[[tool.poetry.source]]
name = "bink-pypi"
url = "https://269fdc63-af3d-4eca-8101-8bddc22d6f14:b694b5b1-f97e-49e4-959e-f3c202e3ab91@pypi.gb.bink.com/simple"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["app/tests/unit"]