[tool.poetry]
name = "midas"
version = "0.0.0"
description = "Retailer integration service"
authors = ["mlatham <ml@bink.com>"]
license = "Bink"
readme = "README.md"
packages = [
    { include = "app" },
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[[tool.poetry.source]]
name = "pypi-azure"
url = "https://pkgs.dev.azure.com/binkhq/_packaging/binkhq/pypi/simple/"
priority = "supplemental"


[tool.poetry.dependencies]
python = "^3.11"
arrow = "^1.3.0"
blinker = "^1.7.0"
flask-restplus = "^0.13.0"
hashids = "^1.3.1"
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
celery = "^5.3.6"
flask = "^3.0.0"
flask-restful = "^0.3.10"
flask-script = "^2.0.6"
tenacity = "^8.2.3"
sentry-sdk = "^1.39.0"
requests = "^2.31.0"
prometheus-client = "^0.19.0"
werkzeug = "^3.0.1"
azure-oidc = "^1.0.1"
soteria = { version = "^1.6.3", source = "pypi-azure" }
gunicorn = "^21.2.0"
user-token-store = "^1.1.6"
urllib3 = "^2.1.0"
click = "^8.1.7"
alembic = "^1.13.1"
sqlalchemy = "^2.0.24"
typer = "^0.9.0"
flask-admin = "^1.6.1"
sqlalchemy-utils = "^0.41.1"
rq = "^1.15.1"
sqlalchemy-stubs = "^0.4"
argon2-cffi = "^23.1.0"
olympus-messaging = "^0.3.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
flask-testing = "^0.8.1"
httpretty = "^1.1.4"
ipdb = "^0.13.13"
ipython = "^8.19.0"
mypy = "^1.8.0"
types-certifi = "^2021.10.8.3"
types-python-dateutil = "^2.8.19.14"
types-redis = "^4.6.0.11"
types-setuptools = "^69.0.0.0"
types-six = "^1.16.21.9"
types-toml = "^0.10.8.7"
xenon = "^0.9.1"
responses = "^0.24.1"
types-requests = "^2.31.0.20231231"
types-urllib3 = "^1.26.25.14"
ruff = "^0.1.9"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["app/tests/unit"]
